Ajout de phpunit dans le composer et fichier des bash pour le php
Ajout de phpunit dans le composer.json
Ajout d'un fichier bash_aliases à ajouter dans le container php
Mise à jour du deploy.sh

--- a/nginx/symfony3.conf
+++ b/nginx/symfony3.conf
@@ -1,6 +1,6 @@
 server {
     server_name symfony3.dev www.symfony3.dev;
-    root /casper/web;
+    root /var/www/html/casper/web;
 
     location / {
         # try to serve file directly, fallback to app.php
