--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get update \
         pdo_mysql
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
+#RUN echo 'source /etc/'
 #~~~ DIRS ~~~#
 WORKDIR /var/www/html/
 
